fixed text visibility on buttons

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -28,10 +28,12 @@ html {
 
 h1 {
   font-size: 10rem;
+  text-shadow: 14px 12px 20px rgba(0, 0, 0, .5);
 }
 
 .accent-display {
   margin-bottom: 80px;
+  text-shadow: 14px 12px 20px rgba(0, 0, 0, .5);
 }
 
 .tempo-button-container {
@@ -47,7 +49,7 @@ h1 {
   text-decoration:none;
   font-family:'Roboto',sans-serif;
   font-size: 2rem;
-  color: gray;
+  color: white;
   background-color:salmon;
   text-align:center;
   height: 5rem;
@@ -83,7 +85,7 @@ button:active {
   margin-top: .5rem;
   width: 20px;
   height: 4rem;
-  background: rgba(128, 128, 128, 0.93);
+  background: whitesmoke;
   border: 0;
   border-radius: 5px;
   cursor: pointer;
